--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,4 +63,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Build-MacOS
-          path: ${{ github.workspace }}\Build\MacOs\
+          path: ../../Assets
