--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,38 +41,44 @@ jobs:
 #           name: Build-${{ matrix.targetPlatform }}
 #           path: build/${{ matrix.targetPlatform }}
           
-  buildForMac:
-    name: Build for Mac
+ buildForMacOSBasedPlatforms:
+    name: Build for ${{ matrix.targetPlatform }}
     runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
+        projectPath:
+          - test-project
         targetPlatform:
-          - StandaloneOSX
-    outputs:
-      buildVersion: ${{ steps.build.outputs.buildVersion }}
+          - StandaloneOSX # Build a macOS standalone.
+
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           lfs: true
+
       - uses: actions/cache@v2
         with:
-          path: Library
+          path: ${{ matrix.projectPath }}/Library
           key:
-            Library-${{ matrix.targetPlatform }}-${{ hashFiles('Assets/**', 'Packages/**',
-            'ProjectSettings/**') }}
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-${{
+            hashFiles(matrix.projectPath) }}
           restore-keys: |
-            Library-${{ matrix.targetPlatform }}-
+            Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}-
+            Library-${{ matrix.projectPath }}-
             Library-
+
       - uses: game-ci/unity-builder@v2
-        id: build
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
+          projectPath: ${{ matrix.projectPath }}
           targetPlatform: ${{ matrix.targetPlatform }}
-          versioning: Semantic
+
       - uses: actions/upload-artifact@v2
         with:
-          name: Build-${{ matrix.targetPlatform }}
-          path: build/${{ matrix.targetPlatform }}
+          name: Build
+          path: build
