--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,78 +3,57 @@ name: Build project
 on: [push, pull_request]
 
 jobs:
-#   buildForWindowsAndLinux:
-#     name: Build for ${{ matrix.targetPlatform }}
-#     runs-on: ubuntu-latest
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         targetPlatform:
-#           - StandaloneWindows # Build a Windows 32-bit standalone.
-#           - StandaloneWindows64 # Build a Windows 64-bit standalone.
-#           - StandaloneLinux64 # Build a Linux 64-bit standalone.
-#     outputs:
-#       buildVersion: ${{ steps.build.outputs.buildVersion }}
-#     steps:
-#       - uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0
-#           lfs: true
-#       - uses: actions/cache@v2
-#         with:
-#           path: Library
-#           key:
-#             Library-${{ matrix.targetPlatform }}-${{ hashFiles('Assets/**', 'Packages/**',
-#             'ProjectSettings/**') }}
-#           restore-keys: |
-#             Library-${{ matrix.targetPlatform }}-
-#             Library-
-#       - uses: game-ci/unity-builder@v2
-#         id: build
-#         env:
-#           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-#         with:
-#           targetPlatform: ${{ matrix.targetPlatform }}
-#           versioning: Semantic
-#       - uses: actions/upload-artifact@v2
-#         with:
-#           name: Build-${{ matrix.targetPlatform }}
-#           path: build/${{ matrix.targetPlatform }}
-          
- buildForMacOSBasedPlatforms:
+  buildForAllSupportedPlatforms:
     name: Build for ${{ matrix.targetPlatform }}
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         targetPlatform:
-          - StandaloneOSX # Build a macOS standalone.
-
+          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - StandaloneLinux64 # Build a Linux 64-bit standalone.
+          - WebGL # WebGL.
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           lfs: true
-
       - uses: actions/cache@v2
         with:
           path: Library
-          key:
-            Library-${{ matrix.targetPlatform }}-${{ hashFiles('Assets/**', 'Packages/**',
-            'ProjectSettings/**') }}
-          restore-keys: |
-            Library-${{ matrix.targetPlatform }}-
-            Library-
-
+          key: Library-${{ matrix.targetPlatform }}
+          restore-keys: Library-
       - uses: game-ci/unity-builder@v2
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
-          versioning: Semantic
       - uses: actions/upload-artifact@v2
         with:
-          name: Build
-          path: build
+          name: Build-${{ matrix.targetPlatform }}
+          path: build/${{ matrix.targetPlatform }}
+          
+  deployToGitHubPages:
+    name: Deploy to the Web via GitHub Pages
+    runs-on: ubuntu-latest
+    needs: buildForAllSupportedPlatforms
+    if: github.event.action == 'published' || (contains(github.event.inputs.workflow_mode, 'release') && contains(github.event.inputs.workflow_mode, 'WebGL'))
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Download WebGL Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: cgs-WebGL
+          path: build/WebGL
+      - name: Copy the WebGL build artifacts to the GitHub Pages directory
+        env:
+          WEBGL_BUILD_PATH: ${{ format('{0}/build/WebGL', github.workspace) }}
+          WEBGL_PAGES_PATH: ${{ format('{0}/docs/WebGL', github.workspace) }}
+        run: find $WEBGL_BUILD_PATH -type f -name "**WebGL.*" -exec cp {} $WEBGL_PAGES_PATH \;
+      - name: Deploy to GitHub Pages
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
+          file_pattern: docs/**
+          commit_message: Deploy to GitHub Pages
