--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Build project
 
-on: [push, pull_request]
+on: 
+  workflow_dispatch
 
 jobs:
   buildForAllSupportedPlatforms:
@@ -31,3 +32,43 @@ jobs:
         with:
           name: Build-${{ matrix.targetPlatform }}
           path: build/${{ matrix.targetPlatform }}
+          
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Checkout fred
+        uses: actions/checkout@v2
+        with:
+          repository: 'freenet/fred'
+          fetch-depth: 0
+          path: 'fred'
+
+      - name: Download fred from the Github Release
+        uses: i3h/download-release-asset@v1.2.0
+        with:
+          owner: "freenet"
+          repo: "fred"
+          tag: "latest"
+          file: "freenet.jar"
+
+      - uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: unzip
+
+      - uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: updateSetupFile
+
+      - name: Building the installer
+        run: |
+          "%programfiles(x86)%\Inno Setup 6\iscc.exe" "SetupTest.iss"
+          shell: cmd
+
+      - name: Upload the installer as an artifact
+        uses: actions/upload-artifact@v2
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          path: "Output/FreenetInstaller.exe"
+          name: wininstaller-innosetup
