--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,6 @@ jobs:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Build-${{ matrix.targetPlatform }}
-          path: build/${{ matrix.targetPlatform }}
 
       - name: Checkout fred
         uses: actions/checkout@v2
@@ -46,14 +42,17 @@ jobs:
           repo: "fred"
           tag: "latest"
           file: "freenet.jar"
+          path: 'fred'
 
       - uses: eskatos/gradle-command-action@v1
         with:
           arguments: unzip
+          path: 'fred'
 
       - uses: eskatos/gradle-command-action@v1
         with:
           arguments: updateSetupFile
+          path: 'fred'
 
       - name: Building the installer
         run: |
@@ -64,5 +63,5 @@ jobs:
         uses: actions/upload-artifact@v2
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          path: "Output/FreenetInstaller.exe"
+          path: "Output/MyGame_installer.exe"
           name: wininstaller-innosetup
