--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Building the installer
         run: |
-          "%programfiles(x86)%\Inno Setup 6\iscc.exe" "SetupTest.iss"
+          "%programfiles(x86)%\Inno Setup 6\iscc.exe" "..\SetupTest.iss"
           shell: cmd
 
       - name: Upload the installer as an artifact
