--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
 
-
+      - uses: olafurpg/setup-gpg@v3
       - name: Building the installer
         run: |
           "%programfiles(x86)%\Inno Setup 6\iscc.exe SetupTest.iss"
