--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: olafurpg/setup-gpg@v3
       - name: Building the installer
         run: |
-          "%programfiles(x86)%\Inno Setup 6\iscc.exe SetupTest.iss"
+          "%programfiles(x86)%\WiX Toolset v3.11\bin\candle.exe SetupTest.wxs"
           shell: cmd
         
 
