--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@ jobs:
 
       - uses: olafurpg/setup-gpg@v3
       - name: Building the installer
-        run: |
+        run: | 
+          "dir %programfiles(x86)%"
           "%programfiles(x86)%\WiX Toolset v3.11\bin\candle.exe SetupTest.wxs"
           shell: cmd
         
