--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Building the installer
         run: | 
           dir "%programfiles(x86)%"
-          "%programfiles(x86)%\Inno Setup 6\iscc.exe" SetupTest.iss
-          shell: cmd
+#          "%programfiles(x86)%\Inno Setup 6\iscc.exe" SetupTest.iss
+#          shell: cmd
         
 
 #       - name: Upload the installer as an artifact
