--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 #       - uses: olafurpg/setup-gpg@v3
       - name: Building the installer
         run: | 
-          dir "%programfiles(x86)%"
+          dir "C:\Program Files (x86)"
 #          "%programfiles(x86)%\Inno Setup 6\iscc.exe" SetupTest.iss
 #          shell: cmd
         
