--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        unityVersion:
+          - 2020.2.1f1
         targetPlatform:
           - StandaloneWindows64 # Build a Windows 64-bit standalone.
     steps:
@@ -33,7 +35,7 @@ jobs:
       - name: Building the installer
         run: | 
           "C:\Program Files (x86)\Inno Setup 6\iscc.exe" "SetupTest.iss"
-          shell: cmd
+        shell: cmd
         
 
 #       - name: Upload the installer as an artifact
