--- a/.github/workflows/dmg.yml
+++ b/.github/workflows/dmg.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Building the installer
         run: | 
+          brew install create-dmg
           create-dmg game.dmg build/StandaloneOSX/StandaloneOSX.app
         
 
