--- a/.github/workflows/dmg.yml
+++ b/.github/workflows/dmg.yml
@@ -39,5 +39,5 @@ jobs:
         uses: actions/upload-artifact@v2
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          path: build/StandaloneOSX/game.dmg
+          path: build/game.dmg
           name: Setup
